# renderer

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: FindCTRE.cmake  warnings.cmake
data/: render-config.json
src/: camera.cpp  camera.h  colour.cpp  colour.h  frame.cpp  frame.h  intersection.h  main.cpp  material.h  math-utils.h  obj.cpp  obj.h  png-write.cpp  png-write.h  primative.cpp  primative.h  renderer.cpp  renderer.h  scene.cpp  scene.h  vec.h
test/: CMakeLists.txt
